fix: home elements spacing

--- a/src/less/home.less
+++ b/src/less/home.less
@@ -10,7 +10,7 @@ html {
 
 .home__title {
   font-size: 2rem; /* mobile 34px */
-  letter-spacing: 0.03em;
+  letter-spacing: var(--low--letter-spacing);
   line-height: 1;
   margin: 0;
   text-transform: uppercase;
@@ -29,12 +29,11 @@ html {
 
 .home__bio {
   font-size: 1.111112rem; /* desktop 20px */
-  margin: 3rem 0 2rem;
+  margin: 2rem 0;
   max-width: 30rem;
 }
 
 main {
-  padding: 2rem 0 0;
   text-align: right;
   width: 100%;
 }
@@ -48,6 +47,7 @@ main {
 .home__nav--line {
   font-style: italic;
   letter-spacing: var(--medium--letter-spacing);
+  margin: 0 0 1rem;
   text-transform: uppercase;
 }
 
